# deliberation

./: .gitignore  .gitmodules  README.md  anticlustering.md  environment.yml  proof.md  pyproject.toml  requirements.txt
anticlustering/: __init__.py  algorithm.py  benchmark.py  dispersion.py  embed.py  helpers.py  main.py  pipeline.py  quality.py
data/: README.md
output/: campus_protests_assignments.csv  campus_protests_embeddings.npy  campus_protests_participant_ids.csv  foreign_intervention_assignments.csv  foreign_intervention_embeddings.npy  foreign_intervention_participant_ids.csv  right_to_assemble_assignments.csv  right_to_assemble_embeddings.npy  right_to_assemble_participant_ids.csv
src/: __init__.py
src/data/: __init__.py  habermas_loader.py  kialo_loader.py  schemas.py
src/embedding/: __init__.py  dataset.py  model.py
src/evaluation/: __init__.py  baselines.py  evaluator.py  formatters.py  probes.py
src/generation/: __init__.py  cross_topic.py  diversity_sampler.py  issue_filter.py  opinion_generator.py  schemas.py
