[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "deliberation"
version = "0.1.0"
description = "Anti-clustering group formation and embedding pipeline for large-scale deliberation (Frankly)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24",
    "torch>=2.0",
    "sentence-transformers>=3.0",
    "peft>=0.10",
    "safetensors>=0.4",
    "pandas>=2.0",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["anticlustering*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
